--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <img src="./imgs/Muñoz2.jpg" id="imgMuñoz">
     </div>
     <div id="dvText">
-        <h3>Ariana quieres estar con migo</h3>
+        <h3>ariana quieres estar con migo</h3>
+        <h3 id="h3opcion">ya no ay mas opsion</h3>
     </div>
     <div id="dvBotones">
         <button class="btns" id="btnSi">ZI</button>
