--- a/si.html
+++ b/si.html
@@ -17,7 +17,9 @@
         <img src="./imgs/Muñoz1.jpg" id="imgMuñoz">
     </div>
     
-    <h3>Te espero en el recreo de las 12</h3>
+    <div id="dvText">
+        <h3>Te espero en el recreo de las 12</h3>
+    </div>
     
     <div id="dvBotones">
         <button class="btns" id="btnWhatsApp">mi watsap</button>
