--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
 
     <div id="dvImg">
         <img src="./imgs/Muñoz2.jpg" id="imgMuñoz">
+        <!--<video src="./video/buzoPene.mp4" style="margin-bottom: 20px"></video>-->
+        <button id="btnEaster">PUTA</button>
     </div>
     <div id="dvText">
         <h3>ariana quieres estar con migo</h3>
         <h3 id="h3opcion">ya no ay mas opsion</h3>
     </div>
+    
+    <video src="./video/Moscu.mp4"></video>
+    
     <div id="dvBotones">
         <button class="btns" id="btnSi">ZI</button>
         <button class="btns" id="btnNo">NO</button>
