--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h3 id="h3opcion">ya no ay mas opsion</h3>
     </div>
     
-    <video src="./video/Moscu.mp4"></video>
+    <video src="./imgs/Muñoz3.mp4"></video>
     
     <div id="dvBotones">
         <button class="btns" id="btnSi">ZI</button>
