--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="dvImg">
         <img src="./imgs/Muñoz2.jpg" id="imgMuñoz">
-        <video src="./video/Moscu.mp4" id="videoMuñoz"></video>
+        <video src="./video/BaileMuñoz.mp4" id="videoMuñoz"></video>
         <!--<video src="./video/buzoPene.mp4" style="margin-bottom: 20px"></video>-->
         <button id="btnEaster">PUTA</button>
     </div>
